--- a/manifest.plist
+++ b/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/fubaoyule/fbdownload.git/FuTuRelease.ipa</string>
+					<string>https://github.com/fubaoyule/fbdownload/blob/master/FuTuRelease.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://github.com/fubaoyule/fbdownload.git/futuIcon.png</string>
+					<string>https://github.com/fubaoyule/fbdownload/blob/master/futuIcon.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://github.com/fubaoyule/fbdownload.git/futuIcon2.png</string>
+					<string>https://github.com/fubaoyule/fbdownload/blob/master/futuIcon2.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
